# plain-sight

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
plain_sight/: cli.cc  codec.cc  codec.h  codec_test.cc  decoder.cc  decoder.h  encoder.cc  encoder.h  qr_codes.cc  qr_codes.h  qr_codes_test.cc  util.cc  util.h  video_generator.cc  video_generator.h  video_generator_test.cc
